--- a/themes/diaspora/layout/_partial/photoswipe.ejs
+++ b/themes/diaspora/layout/_partial/photoswipe.ejs
@@ -1,7 +1,5 @@
-<%- css(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/photoswipe/photoswipe.css']) %>
-<%- css(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/photoswipe/default-skin/default-skin.css']) %>
-<%- js(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/photoswipe/photoswipe.min.js']) %>
-<%- js(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/photoswipe/photoswipe-ui-default.min.js']) %>
+<%- css(['/photoswipe/photoswipe.css', '/photoswipe/default-skin/default-skin.css']) %>
+<%- js(['/photoswipe/photoswipe.min.js', '/photoswipe/photoswipe-ui-default.min.js']) %>
 
 <!-- Root element of PhotoSwipe. Must have class pswp. -->
 <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
