--- a/themes/diaspora/layout/_partial/scripts.ejs
+++ b/themes/diaspora/layout/_partial/scripts.ejs
@@ -1,5 +1,3 @@
-<%- js(['//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js'])%>
-<%- js(['//cdn.jsdelivr.net/gh/jquery/jquery@1.8.3/jquery.min.js'])%>
-<%- js(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/js/plugin.js'])%>
-<%- js(['//cdn.jsdelivr.net/gh/mrgaodi/CDN/js/diaspora.js'])%>
-<%- partial('photoswipe') %> 
+<% if (theme.gitalk.enable){ %><%- js(['//cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js'])%><%}%>
+<%- js(['//lib.baomitu.com/jquery/1.8.3/jquery.min.js', 'js/plugin.js', 'js/typed.js', 'js/diaspora.js'])%>
+<%- partial('photoswipe') %>
